pre-release 9.3.14 alpha

--- a/proguard.conf
+++ b/proguard.conf
@@ -1,8 +1,8 @@
--injars out\artifacts\XiaoMiTool_jar\XiaoMiTool.jar
--outjars out\artifacts\XiaoMiTool.jar
+-injars out\artifacts\XiaoMiTool_jar2\XiaoMiTool.jar
+-outjars out\artifacts\XiaoMiTool_jar2\XiaoMiTool_guarded.jar
 
--libraryjars 'C:\Program Files\Java\jdk1.8.0_172\jre\lib\rt.jar'
--libraryjars 'C:\Program Files\Java\jdk1.8.0_172\jre\lib\ext\jfxrt.jar'
+-libraryjars 'C:\Program Files\Java\jdk-11\jmods'
+-libraryjars out\artifacts\XiaoMiTool_jar2\openjfx-jmods
 
 -dontshrink
 -dontoptimize
@@ -30,8 +30,6 @@
     <methods>;
 }
 
-
-
 # Keep - Applications. Keep all application classes, along with their 'main' methods.
 -keepclasseswithmembers public class * {
     public static void main(java.lang.String[]);
@@ -56,6 +54,20 @@
 # Keep - Native method names. Keep all native class/method names.
 -keepclasseswithmembers,includedescriptorclasses,allowshrinking class * {
     native <methods>;
+}
+
+# Remove - System method calls. Remove all invocations of System
+# methods without side effects whose return values are not used.
+-assumenosideeffects public class java.lang.System {
+    public static long currentTimeMillis();
+    static java.lang.Class getCallerClass();
+    public static int identityHashCode(java.lang.Object);
+    public static java.lang.SecurityManager getSecurityManager();
+    public static java.util.Properties getProperties();
+    public static java.lang.String getProperty(java.lang.String);
+    public static java.lang.String getenv(java.lang.String);
+    public static java.lang.String mapLibraryName(java.lang.String);
+    public static java.lang.String getProperty(java.lang.String,java.lang.String);
 }
 
 # Remove - Math method calls. Remove all invocations of Math
@@ -306,21 +318,6 @@
     public java.lang.String substring(int,int);
 }
 
-# Remove - System method calls. Remove all invocations of System
-# methods without side effects whose return values are not used.
--assumenosideeffects public class java.lang.System {
-    public static long currentTimeMillis();
-    static java.lang.Class getCallerClass();
-    public static int identityHashCode(java.lang.Object);
-    public static java.lang.SecurityManager getSecurityManager();
-    public static java.util.Properties getProperties();
-    public static java.lang.String getProperty(java.lang.String);
-    public static java.lang.String getenv(java.lang.String);
-    public static java.lang.String mapLibraryName(java.lang.String);
-    public static java.lang.String getProperty(java.lang.String,java.lang.String);
-    
-}
-
 -assumenosideeffects public class com.xiaomitool.v2.logging.Log {
-	public static *** debug(...);
+    public static *** debug(...);
 }
