feat: add google java format

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.9'
+    id 'com.github.sherter.google-java-format' version '0.9'
 }
 
 
