--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,27 @@
+import org.gradle.internal.os.OperatingSystem;
+
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.9'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
     id 'com.github.sherter.google-java-format' version '0.9'
-    id "com.github.johnrengelman.shadow" version "6.1.0"
+    id "com.github.johnrengelman.shadow" version "7.1.0"
+    id 'org.beryx.runtime' version '1.12.6'
+}
+ext {
+    XMT_VERSION = "21.10.10"
+    XMT_NAME = "XiaoMiTool V2"
+    XMT_DESC = "Unofficial tool for simple Xiaomi modding"
+    XMT_URL = "https://www.xiaomitool.com"
 }
 
-
+version = XMT_VERSION
 
 repositories {
     flatDir {
         dirs("lib")
     }
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
 
 sourceSets {
@@ -25,26 +35,67 @@ sourceSets {
 
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_11
-    targetCompatibility = JavaVersion.VERSION_11
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
+
 javafx {
-    version = '11'
+    version = '17'
     modules = ["javafx.controls", "javafx.fxml", "javafx.web", "javafx.swing"]
 }
 
-shadowJar {
-    exclude "LICENSE.txt"
-    exclude "prebuilt/**"
-    javafx {
-        configuration = "shadow"
+def currentOs = OperatingSystem.current()
+
+WorkResult copyResources(Object destination, OperatingSystem system) {
+    return copy {
+        from "."
+        include "res/lang/*.xml"
+        if (system.windows) {
+            include "res/tools/win/**/*.*"
+            include "res/driver/**/*.*"
+        } else if (system.macOsX) {
+            include "res/tools/mac/**/*.*"
+        } else {
+            include "res/tools/lin/**/*.*"
+        }
+        into destination
     }
-    minimize()
 }
 
+
+runtime {
+    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
+    launcher {
+        noConsole = true
+    }
+    jpackage {
+        imageName = XMT_NAME
+        installerOptions += ['--description', XMT_DESC]
+        installerOptions += ['--about-url', XMT_URL]
+        installerOptions += ['--license-file', 'LICENSE']
+
+        if (currentOs.windows) {
+            installerOptions += ['--win-help-url', XMT_URL]
+            installerOptions += ['--win-menu']
+            installerOptions += ['--win-update-url', XMT_URL]
+        }
+
+        tasks.jpackageImage.doLast {
+            copyResources(imageOutputDirOrDefault.toPath().resolve(imageNameOrDefault).toFile(), currentOs)
+        }
+    }
+
+    tasks.runtime.doLast {
+        copyResources(imageDir.asFile, currentOs)
+    }
+
+}
+
+
 dependencies {
-    implementation(files("./lib/apktool_2.4.0.jar"))
+    implementation 'com.github.iBotPeaches:Apktool:2.4.0'
     implementation 'com.google.guava:guava:29.0-jre'
     implementation 'com.google.protobuf:protobuf-java:3.7.0'
     implementation 'com.mortennobel:java-image-scaling:0.8.6'
@@ -63,8 +114,8 @@ tasks.compileJava {
 
 
 application {
-    // Define the main class for the application.
-    mainClassName = "com.xiaomitool.v2.gui.MainWindow"
+    mainClass.set("com.xiaomitool.v2.gui.Launcher")
+    applicationName = XMT_NAME
 }
 
 
